app/src/pages/unparameterized/OwnerRooms/SectionRoomView/styles.css
.pages-OwnerRooms-SectionRoomForm {
  min-width: 250px;
  display: flex;
  flex-direction: column;
}

.pages-OwnerRooms-SectionRoomForm .editable-container {
  display: flex;
  flex-direction: row;
}

/* column wise on smaller displays */
@media (max-width: 500px) {
  .pages-OwnerRooms-SectionRoomForm .editable-container {
    display: flex;
    flex-direction: column;
  }
}

.pages-OwnerRooms-SectionRoomForm .editable-container .textedit-container {
  width: calc(50% - 2 * var(--pad-3));
  padding: var(--pad-3);
}

.pages-OwnerRooms-SectionRoomForm
  .editable-container
  .textedit-container
  input:not([type="submit"]) {
  padding: var(--pad-3);
  background-color: var(--color-bg-secondary);
  border-radius: var(--rounded-rad);
  border: 1px solid var(--color-light);
}

.pages-OwnerRooms-SectionRoomForm
  .editable-container
  .textedit-container
  .pashapashi-container {
  display: flex;
  flex-direction: row;
  gap: var(--pad-2);
  justify-content: space-between;
  align-items: center;
}

.pages-OwnerRooms-SectionRoomForm .editable-container .filedit-container {
  width: calc(50% - var(--pad-3));
  padding: var(--pad-3);
  padding-left: var(--pad-0);
}

.pages-OwnerRooms-SectionRoomForm .submit-container {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
}

.pages-OwnerRooms-SectionRoomForm .btn-close {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;

  width: 30px;
  height: 30px;

  margin: 0;
  padding: var(--pad-1);

  border-radius: 100%;

  position: absolute;
  top: var(--pad-2);
  right: var(--pad-2);

  font-size: 1rem;
  cursor: pointer;
  color: #fff;
  background-color: #0000005c;
}

